<resources>
    <string name="app_name">Qualis</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_usuario_vacio">Por favor ingresar usuario</string>
    <string name="error_usuario_invalido">Usuario incorrecto</string>
    <string name="error_pass_vacio">Por favor ingresar Contraseña</string>
    <string name="error_pass_invalida">Contraseña incorrecta</string>

    <string name="instalar_filtros">Instalar Filtros</string>
    <string name="recoger_filtros">Recoger Filtros</string>
    <string name="calibrar">Calibrar equipo</string>

    <!-- Actividad datos -->
    <string name="hint_temperatura_ambiente">Temperatura ambiente (°C)</string>
    <string name="hint_presion_estancamiento_ini">Presion de estancamiento inicial (inH2O)</string>
    <string name="hint_presion_estancamiento_fin">Presion de estancamiento final (inH2O)</string>
    <string name="hint_horometro_ini">Horómetro inicial </string>
    <string name="hint_horometro_fin">Horómetro final</string>
    <string name="hint_presion_atmosf">Presion atmosferica (mm Hg)</string>

    <string name="hint_volumen">Volumen</string>
    <string name="hint_tiempo_operacion">Tiempo de operacion (23 a 25 h)</string>

    <string name="hint_fecha_muestreo">Fecha de muestreo</string>
    <string name="hint_observaciones">Observaciones</string>
    <string name="txt_detalles">Detalles</string>

    <string-array name="unidades_presion">
        <item>mmHg</item>
        <item>atm</item>
        <item>inHg</item>
    </string-array>

    <string-array name="unidades_temperatura">
        <item>°C</item>
        <item>°F</item>
        <item>°K</item>
    </string-array>

    <string name="datos_calibrador">Datos Calibrador</string>
    <string name="muestras_calibrador">Muestras(in H2O)</string>
    <string name="btn_guardar">GUARDAR</string>

    // texto del menu opciones
    <string name="sincro">Sincronizar</string>
    <string name="Dfiltros">Descargar Filtros</string>
    <string name="Csesion">Cerrar Sesión</string>
    <string name="verfiltros">Ver Filtros</string>
    <string name="marca">Marca:</string>
    <string name="tipo">Tipo:</string>
    <string name="filtros">Filtros:</string>
    <string name="ultima_calibracion">Ultima \nCalibración:</string>
    <string name="descripcion">Descripción</string>


</resources>
