<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fondo_App"
    android:paddingRight="10dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    tools:context="com.example.oscar.aeronet.vista.InstalarFiltros"
    >

    <TextView
        android:id="@+id/tv_filtro_a_instalar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/texto_datos" />

    <!-- Temperatura ambiente -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/lay_temp_amb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_presion_est_ini">

        <EditText
            android:id="@+id/edt_temp_amb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_temperatura_ambiente"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textSize="@dimen/texto_datos" />
    </android.support.design.widget.TextInputLayout>

    <!-- Presion atmosferica -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/lay_presion_atm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_temp_amb">

        <EditText
            android:id="@+id/edt_presion_atm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/texto_datos"
            android:hint="@string/hint_presion_atmosf"
            android:maxLines="1"
            android:inputType="numberDecimal"
            />
    </android.support.design.widget.TextInputLayout>

    <!-- Horometro -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/lay_horometro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_presion_atm">

        <EditText
            android:id="@+id/edt_horometro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/texto_datos"
            android:hint="@string/hint_horometro_ini"
            android:maxLines="1"
            android:inputType="numberDecimal"
            />
    </android.support.design.widget.TextInputLayout>

    <!-- Presion de estancamiento inicial -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/lay_presion_est_ini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_filtro_a_instalar">


        <EditText
            android:id="@+id/edt_presion_est_ini"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/texto_datos"
            android:hint="@string/hint_presion_estancamiento_ini"
            android:maxLines="1"
            android:inputType="numberDecimal"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_centerHorizontal="true"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_guardar"
        android:textStyle="bold"
        android:textColor="@color/blanco"
        android:background="@drawable/forma_boton"
        android:onClick="guardar"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        />

</RelativeLayout>
