<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_fondo_App"
    tools:context="com.example.oscar.aeronet.vista.RecogerFiltros">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/filtro_recoger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/texto_datos"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_temp" />
        <!-- Temperatura ambiente -->
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="5dp"
            android:id="@+id/lay_temp_amb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_temp_amb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/texto_datos"
                android:hint="@string/hint_temperatura_ambiente"
                android:maxLines="1"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_pressure" />
            <!-- Presion de estancamiento final (solo equipos Hi Vol)-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_presion_est_ini"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp">

                <EditText
                    android:id="@+id/edt_presion_est_fin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/texto_datos"
                    android:hint="@string/hint_presion_estancamiento_fin"
                    android:maxLines="1"
                    android:inputType="numberDecimal"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_pressure" />
            <!-- Presion atmosferica -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_presion_atm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp">

                <EditText
                    android:id="@+id/edt_presion_atm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/texto_datos"
                    android:hint="@string/hint_presion_atmosf"
                    android:maxLines="1"
                    android:inputType="numberDecimal"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


            <!-- Horometro -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_horometro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_horometro_fin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/texto_datos"
                    android:hint="@string/hint_horometro_fin"
                    android:maxLines="1"
                    android:inputType="numberDecimal"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Observaciones -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_observaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_observaciones"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:maxLines="5"
                    android:textSize="@dimen/texto_datos"
                    android:hint="@string/hint_observaciones"
                    />

            </android.support.design.widget.TextInputLayout>

            <!-- Layout para equipos Low Vol -->
            <LinearLayout
                android:id="@+id/lay_equipo_low_vol"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lay_volumen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_volumen"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/texto_datos"
                        android:hint="@string/hint_volumen"
                        android:maxLines="1"
                        android:inputType="numberDecimal"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lay_tiempo_operacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_tiempo_operacion"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/texto_datos"
                        android:hint="@string/hint_tiempo_operacion"
                        android:maxLength="2"
                        android:maxLines="1"
                        android:inputType="number"
                        />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp">
                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_centerHorizontal="true"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:layout_marginTop="16dp"
                    android:text="@string/btn_guardar"
                    android:textStyle="bold"
                    android:textColor="@color/blanco"
                    android:background="@drawable/forma_boton"
                    android:onClick="guardarMuestra"
                    android:layout_marginBottom="10dp"
                    />

            </RelativeLayout>
        </LinearLayout>

</ScrollView>
