<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fondo_App"
    tools:context="com.example.oscar.aeronet.vista.MenuCampo"
    android:orientation="vertical"

    >

    <!--- INstalar filtroz -->
    <RelativeLayout
        android:id="@+id/rel_instalar_filtros"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alto_item_menu"
        android:background="@color/color_fondo_App"
        android:onClick="irInstalarFiltros"
        android:layout_marginLeft="10dp"
        >

        <ImageView
            android:id="@+id/imgInstalar"
            android:layout_width="@dimen/ancho_alto_img_menu"
            android:layout_height="@dimen/ancho_alto_img_menu"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_filter"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/instalar_filtros"
            android:textColor="@color/blanco"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"

            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blanco"
        />
    <RelativeLayout
        android:id="@+id/rel_recoger_filtros"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alto_item_menu"
        android:background="@color/color_fondo_App"
        android:onClick="irRecogerFiltros"
        android:layout_marginLeft="10dp"

        >

        <ImageView
            android:id="@+id/img_recoger"
            android:layout_width="@dimen/ancho_alto_img_menu"
            android:layout_height="@dimen/ancho_alto_img_menu"
            android:layout_centerVertical="true"

            android:src="@mipmap/ic_filter"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/recoger_filtros"
            android:textColor="@color/blanco"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"

            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blanco"
        />
    <RelativeLayout
        android:id="@+id/rel_calibrar_equipo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alto_item_menu"
        android:background="@color/color_fondo_App"
        android:onClick="calibrarEquipo"
        android:layout_marginLeft="10dp"
        >

        <ImageView
            android:id="@+id/img_calibrar"
            android:layout_width="@dimen/ancho_alto_img_menu"
            android:layout_height="@dimen/ancho_alto_img_menu"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_filter"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/calibrar"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>
